--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   english_words: ^3.1.5
+#  dio: 2.1.0
+  http: 0.12.0+1
 
 dev_dependencies:
   flutter_test:
